<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_home_graph"
    app:startDestination="@id/HomeFragment">


    <fragment
        android:id="@+id/HomeFragment"
        android:name="com.datecs.myapplication.HomeFragment"
        android:label="@string/home_fragment_label"
        tools:layout="@layout/fragment_home">
        <action
            android:id="@+id/action_HomeFragment_to_ProfileFragment"
            app:destination="@id/ProfileFragment" />
    </fragment>


    <fragment
        android:id="@+id/ProfileFragment"
        android:name="com.datecs.myapplication.ProfileFragment"
        android:label="@string/profile_fragment_label"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_ProfileFragment_to_nav_auth_graph"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/HomeFragment"
            app:popUpToInclusive="true" />

    </fragment>

    <fragment
        android:id="@+id/webViewFragment"
        android:name="com.datecs.myapplication.WebViewFragment"
        android:label="@string/web_fragment_label"
        tools:layout="@layout/fragment_webview">

        <argument
            app:argType="string"
            android:name="data"
           app:nullable="true"/>

        <deepLink app:uri="app://webview={data}" />

    </fragment>



</navigation>