<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_auth_graph"
    app:startDestination="@id/SplashFragment">

    <fragment
        android:id="@+id/SplashFragment"
        android:name="com.datecs.myapplication.SplashFragment"
        android:label="@string/splash_fragment_label"
        tools:layout="@layout/fragment_splash">

        <action
            android:id="@+id/action_SplashFragment_to_LoginFragment"
            app:destination="@id/LoginFragment"
            app:popUpTo="@id/SplashFragment"
            app:popUpToInclusive="true" />
    </fragment>
    <fragment
        android:id="@+id/LoginFragment"
        android:name="com.datecs.myapplication.LoginFragment"
        android:label="@string/login_fragment_label"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_LoginFragment_to_SignupFragment"
            app:destination="@id/SignupFragment" />
        <action
            android:id="@+id/action_LoginFragment_to_HomeFragment"
            app:destination="@id/nav_home_graph"
            app:popUpTo="@id/LoginFragment"
            app:popUpToInclusive="true" />


    </fragment>

    <fragment
        android:id="@+id/SignupFragment"
        android:name="com.datecs.myapplication.SignupFragment"
        android:label="@string/signup_fragment_label"
        tools:layout="@layout/fragment_signup" />

    <include app:graph="@navigation/nav_home_graph" />


</navigation>